staging/SWP/swp/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> BLOCKSTART statement_list BLOCKEND
Rule 3     block -> BLOCKSTART BLOCKEND
Rule 4     statement_list -> statement statement_list
Rule 5     statement_list -> statement
Rule 6     statement -> EOL
Rule 7     statement -> expression EOL
Rule 8     statement -> expression ASSIGNMENT expression EOL
Rule 9     expression -> oldexpression COMMA expression
Rule 10    expression -> BRA2 expression KET2
Rule 11    expression -> BRA2 KET2
Rule 12    expression -> oldexpression
Rule 13    oldexpression -> factor INFIXOPERATOR expression
Rule 14    oldexpression -> factor COLON expression
Rule 15    oldexpression -> factorlist
Rule 16    factorlist -> factor factorlist
Rule 17    factorlist -> factor
Rule 18    factor -> factoid
Rule 19    factor -> factoid dotexpression
Rule 20    factoid -> bracketedexpression
Rule 21    factoid -> constructorexpression
Rule 22    factoid -> NUMBER
Rule 23    factoid -> STRING
Rule 24    factoid -> ID
Rule 25    factoid -> factor trailer
Rule 26    factoid -> factor trailertoo
Rule 27    dotexpression -> DOT factor
Rule 28    bracketedexpression -> BRA expression KET
Rule 29    bracketedexpression -> BRA KET
Rule 30    constructorexpression -> BRA3 KET3
Rule 31    constructorexpression -> BRA3 expression KET3
Rule 32    trailer -> BRA2 expression KET2
Rule 33    trailertoo -> COLON EOL block

Terminals, with rules where they appear

ASSIGNMENT           : 8
BLOCKEND             : 2 3
BLOCKSTART           : 2 3
BRA                  : 28 29
BRA2                 : 10 11 32
BRA3                 : 30 31
COLON                : 14 33
COMMA                : 9
DOT                  : 27
EOL                  : 6 7 8 33
ID                   : 24
INFIXOPERATOR        : 13
KET                  : 28 29
KET2                 : 10 11 32
KET3                 : 30 31
NUMBER               : 22
STRING               : 23
error                : 

Nonterminals, with rules where they appear

block                : 1 33
bracketedexpression  : 20
constructorexpression : 21
dotexpression        : 19
expression           : 7 8 8 9 10 13 14 28 31 32
factoid              : 18 19
factor               : 13 14 16 17 25 26 27
factorlist           : 15 16
oldexpression        : 9 12
program              : 0
statement            : 4 5
statement_list       : 2 4
trailer              : 25
trailertoo           : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . BLOCKSTART statement_list BLOCKEND
    (3) block -> . BLOCKSTART BLOCKEND

    BLOCKSTART      shift and go to state 1

    program                        shift and go to state 2
    block                          shift and go to state 3

state 1

    (2) block -> BLOCKSTART . statement_list BLOCKEND
    (3) block -> BLOCKSTART . BLOCKEND
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . statement
    (6) statement -> . EOL
    (7) statement -> . expression EOL
    (8) statement -> . expression ASSIGNMENT expression EOL
    (9) expression -> . oldexpression COMMA expression
    (10) expression -> . BRA2 expression KET2
    (11) expression -> . BRA2 KET2
    (12) expression -> . oldexpression
    (13) oldexpression -> . factor INFIXOPERATOR expression
    (14) oldexpression -> . factor COLON expression
    (15) oldexpression -> . factorlist
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    BLOCKEND        shift and go to state 15
    EOL             shift and go to state 7
    BRA2            shift and go to state 5
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    oldexpression                  shift and go to state 17
    constructorexpression          shift and go to state 11
    factorlist                     shift and go to state 14
    statement                      shift and go to state 10
    factor                         shift and go to state 13
    statement_list                 shift and go to state 19
    expression                     shift and go to state 20
    factoid                        shift and go to state 8

state 2

    (0) S' -> program .



state 3

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 4

    (30) constructorexpression -> BRA3 . KET3
    (31) constructorexpression -> BRA3 . expression KET3
    (9) expression -> . oldexpression COMMA expression
    (10) expression -> . BRA2 expression KET2
    (11) expression -> . BRA2 KET2
    (12) expression -> . oldexpression
    (13) oldexpression -> . factor INFIXOPERATOR expression
    (14) oldexpression -> . factor COLON expression
    (15) oldexpression -> . factorlist
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    KET3            shift and go to state 21
    BRA2            shift and go to state 5
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    oldexpression                  shift and go to state 17
    constructorexpression          shift and go to state 11
    factorlist                     shift and go to state 14
    factor                         shift and go to state 13
    expression                     shift and go to state 22
    factoid                        shift and go to state 8

state 5

    (10) expression -> BRA2 . expression KET2
    (11) expression -> BRA2 . KET2
    (9) expression -> . oldexpression COMMA expression
    (10) expression -> . BRA2 expression KET2
    (11) expression -> . BRA2 KET2
    (12) expression -> . oldexpression
    (13) oldexpression -> . factor INFIXOPERATOR expression
    (14) oldexpression -> . factor COLON expression
    (15) oldexpression -> . factorlist
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    KET2            shift and go to state 23
    BRA2            shift and go to state 5
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    oldexpression                  shift and go to state 17
    constructorexpression          shift and go to state 11
    factorlist                     shift and go to state 14
    factor                         shift and go to state 13
    expression                     shift and go to state 24
    factoid                        shift and go to state 8

state 6

    (22) factoid -> NUMBER .

    DOT             reduce using rule 22 (factoid -> NUMBER .)
    BRA2            reduce using rule 22 (factoid -> NUMBER .)
    COLON           reduce using rule 22 (factoid -> NUMBER .)
    NUMBER          reduce using rule 22 (factoid -> NUMBER .)
    STRING          reduce using rule 22 (factoid -> NUMBER .)
    ID              reduce using rule 22 (factoid -> NUMBER .)
    BRA             reduce using rule 22 (factoid -> NUMBER .)
    BRA3            reduce using rule 22 (factoid -> NUMBER .)
    COMMA           reduce using rule 22 (factoid -> NUMBER .)
    EOL             reduce using rule 22 (factoid -> NUMBER .)
    ASSIGNMENT      reduce using rule 22 (factoid -> NUMBER .)
    KET3            reduce using rule 22 (factoid -> NUMBER .)
    KET2            reduce using rule 22 (factoid -> NUMBER .)
    KET             reduce using rule 22 (factoid -> NUMBER .)
    INFIXOPERATOR   reduce using rule 22 (factoid -> NUMBER .)


state 7

    (6) statement -> EOL .

    EOL             reduce using rule 6 (statement -> EOL .)
    BRA2            reduce using rule 6 (statement -> EOL .)
    NUMBER          reduce using rule 6 (statement -> EOL .)
    STRING          reduce using rule 6 (statement -> EOL .)
    ID              reduce using rule 6 (statement -> EOL .)
    BRA             reduce using rule 6 (statement -> EOL .)
    BRA3            reduce using rule 6 (statement -> EOL .)
    BLOCKEND        reduce using rule 6 (statement -> EOL .)


state 8

    (18) factor -> factoid .
    (19) factor -> factoid . dotexpression
    (27) dotexpression -> . DOT factor

    INFIXOPERATOR   reduce using rule 18 (factor -> factoid .)
    COLON           reduce using rule 18 (factor -> factoid .)
    BRA2            reduce using rule 18 (factor -> factoid .)
    NUMBER          reduce using rule 18 (factor -> factoid .)
    STRING          reduce using rule 18 (factor -> factoid .)
    ID              reduce using rule 18 (factor -> factoid .)
    BRA             reduce using rule 18 (factor -> factoid .)
    BRA3            reduce using rule 18 (factor -> factoid .)
    COMMA           reduce using rule 18 (factor -> factoid .)
    KET             reduce using rule 18 (factor -> factoid .)
    EOL             reduce using rule 18 (factor -> factoid .)
    ASSIGNMENT      reduce using rule 18 (factor -> factoid .)
    KET3            reduce using rule 18 (factor -> factoid .)
    KET2            reduce using rule 18 (factor -> factoid .)
    DOT             shift and go to state 25

    dotexpression                  shift and go to state 26

state 9

    (20) factoid -> bracketedexpression .

    DOT             reduce using rule 20 (factoid -> bracketedexpression .)
    BRA2            reduce using rule 20 (factoid -> bracketedexpression .)
    COLON           reduce using rule 20 (factoid -> bracketedexpression .)
    NUMBER          reduce using rule 20 (factoid -> bracketedexpression .)
    STRING          reduce using rule 20 (factoid -> bracketedexpression .)
    ID              reduce using rule 20 (factoid -> bracketedexpression .)
    BRA             reduce using rule 20 (factoid -> bracketedexpression .)
    BRA3            reduce using rule 20 (factoid -> bracketedexpression .)
    COMMA           reduce using rule 20 (factoid -> bracketedexpression .)
    EOL             reduce using rule 20 (factoid -> bracketedexpression .)
    ASSIGNMENT      reduce using rule 20 (factoid -> bracketedexpression .)
    KET3            reduce using rule 20 (factoid -> bracketedexpression .)
    KET2            reduce using rule 20 (factoid -> bracketedexpression .)
    KET             reduce using rule 20 (factoid -> bracketedexpression .)
    INFIXOPERATOR   reduce using rule 20 (factoid -> bracketedexpression .)


state 10

    (4) statement_list -> statement . statement_list
    (5) statement_list -> statement .
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . statement
    (6) statement -> . EOL
    (7) statement -> . expression EOL
    (8) statement -> . expression ASSIGNMENT expression EOL
    (9) expression -> . oldexpression COMMA expression
    (10) expression -> . BRA2 expression KET2
    (11) expression -> . BRA2 KET2
    (12) expression -> . oldexpression
    (13) oldexpression -> . factor INFIXOPERATOR expression
    (14) oldexpression -> . factor COLON expression
    (15) oldexpression -> . factorlist
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    BLOCKEND        reduce using rule 5 (statement_list -> statement .)
    EOL             shift and go to state 7
    BRA2            shift and go to state 5
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    oldexpression                  shift and go to state 17
    constructorexpression          shift and go to state 11
    factorlist                     shift and go to state 14
    statement                      shift and go to state 10
    factor                         shift and go to state 13
    statement_list                 shift and go to state 27
    expression                     shift and go to state 20
    factoid                        shift and go to state 8

state 11

    (21) factoid -> constructorexpression .

    DOT             reduce using rule 21 (factoid -> constructorexpression .)
    BRA2            reduce using rule 21 (factoid -> constructorexpression .)
    COLON           reduce using rule 21 (factoid -> constructorexpression .)
    NUMBER          reduce using rule 21 (factoid -> constructorexpression .)
    STRING          reduce using rule 21 (factoid -> constructorexpression .)
    ID              reduce using rule 21 (factoid -> constructorexpression .)
    BRA             reduce using rule 21 (factoid -> constructorexpression .)
    BRA3            reduce using rule 21 (factoid -> constructorexpression .)
    COMMA           reduce using rule 21 (factoid -> constructorexpression .)
    EOL             reduce using rule 21 (factoid -> constructorexpression .)
    ASSIGNMENT      reduce using rule 21 (factoid -> constructorexpression .)
    KET3            reduce using rule 21 (factoid -> constructorexpression .)
    KET2            reduce using rule 21 (factoid -> constructorexpression .)
    KET             reduce using rule 21 (factoid -> constructorexpression .)
    INFIXOPERATOR   reduce using rule 21 (factoid -> constructorexpression .)


state 12

    (23) factoid -> STRING .

    DOT             reduce using rule 23 (factoid -> STRING .)
    BRA2            reduce using rule 23 (factoid -> STRING .)
    COLON           reduce using rule 23 (factoid -> STRING .)
    NUMBER          reduce using rule 23 (factoid -> STRING .)
    STRING          reduce using rule 23 (factoid -> STRING .)
    ID              reduce using rule 23 (factoid -> STRING .)
    BRA             reduce using rule 23 (factoid -> STRING .)
    BRA3            reduce using rule 23 (factoid -> STRING .)
    COMMA           reduce using rule 23 (factoid -> STRING .)
    EOL             reduce using rule 23 (factoid -> STRING .)
    ASSIGNMENT      reduce using rule 23 (factoid -> STRING .)
    KET3            reduce using rule 23 (factoid -> STRING .)
    KET2            reduce using rule 23 (factoid -> STRING .)
    KET             reduce using rule 23 (factoid -> STRING .)
    INFIXOPERATOR   reduce using rule 23 (factoid -> STRING .)


state 13

    (13) oldexpression -> factor . INFIXOPERATOR expression
    (14) oldexpression -> factor . COLON expression
    (16) factorlist -> factor . factorlist
    (17) factorlist -> factor .
    (25) factoid -> factor . trailer
    (26) factoid -> factor . trailertoo
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (32) trailer -> . BRA2 expression KET2
    (33) trailertoo -> . COLON EOL block
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    INFIXOPERATOR   shift and go to state 29
    COLON           shift and go to state 30
    COMMA           reduce using rule 17 (factorlist -> factor .)
    KET             reduce using rule 17 (factorlist -> factor .)
    EOL             reduce using rule 17 (factorlist -> factor .)
    ASSIGNMENT      reduce using rule 17 (factorlist -> factor .)
    KET3            reduce using rule 17 (factorlist -> factor .)
    KET2            reduce using rule 17 (factorlist -> factor .)
    BRA2            shift and go to state 28
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    constructorexpression          shift and go to state 11
    trailertoo                     shift and go to state 34
    trailer                        shift and go to state 33
    factor                         shift and go to state 31
    factorlist                     shift and go to state 32
    factoid                        shift and go to state 8

state 14

    (15) oldexpression -> factorlist .

    COMMA           reduce using rule 15 (oldexpression -> factorlist .)
    EOL             reduce using rule 15 (oldexpression -> factorlist .)
    ASSIGNMENT      reduce using rule 15 (oldexpression -> factorlist .)
    KET3            reduce using rule 15 (oldexpression -> factorlist .)
    KET2            reduce using rule 15 (oldexpression -> factorlist .)
    KET             reduce using rule 15 (oldexpression -> factorlist .)


state 15

    (3) block -> BLOCKSTART BLOCKEND .

    DOT             reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    INFIXOPERATOR   reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    COLON           reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    BRA2            reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    NUMBER          reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    STRING          reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    ID              reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    BRA             reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    BRA3            reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    COMMA           reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    EOL             reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    ASSIGNMENT      reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    KET3            reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    KET2            reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    KET             reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)
    $end            reduce using rule 3 (block -> BLOCKSTART BLOCKEND .)


state 16

    (24) factoid -> ID .

    DOT             reduce using rule 24 (factoid -> ID .)
    BRA2            reduce using rule 24 (factoid -> ID .)
    COLON           reduce using rule 24 (factoid -> ID .)
    NUMBER          reduce using rule 24 (factoid -> ID .)
    STRING          reduce using rule 24 (factoid -> ID .)
    ID              reduce using rule 24 (factoid -> ID .)
    BRA             reduce using rule 24 (factoid -> ID .)
    BRA3            reduce using rule 24 (factoid -> ID .)
    COMMA           reduce using rule 24 (factoid -> ID .)
    EOL             reduce using rule 24 (factoid -> ID .)
    ASSIGNMENT      reduce using rule 24 (factoid -> ID .)
    KET3            reduce using rule 24 (factoid -> ID .)
    KET2            reduce using rule 24 (factoid -> ID .)
    KET             reduce using rule 24 (factoid -> ID .)
    INFIXOPERATOR   reduce using rule 24 (factoid -> ID .)


state 17

    (9) expression -> oldexpression . COMMA expression
    (12) expression -> oldexpression .

    COMMA           shift and go to state 35
    KET3            reduce using rule 12 (expression -> oldexpression .)
    KET             reduce using rule 12 (expression -> oldexpression .)
    KET2            reduce using rule 12 (expression -> oldexpression .)
    EOL             reduce using rule 12 (expression -> oldexpression .)
    ASSIGNMENT      reduce using rule 12 (expression -> oldexpression .)

  ! COMMA           [ reduce using rule 12 (expression -> oldexpression .) ]


state 18

    (28) bracketedexpression -> BRA . expression KET
    (29) bracketedexpression -> BRA . KET
    (9) expression -> . oldexpression COMMA expression
    (10) expression -> . BRA2 expression KET2
    (11) expression -> . BRA2 KET2
    (12) expression -> . oldexpression
    (13) oldexpression -> . factor INFIXOPERATOR expression
    (14) oldexpression -> . factor COLON expression
    (15) oldexpression -> . factorlist
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    KET             shift and go to state 36
    BRA2            shift and go to state 5
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    oldexpression                  shift and go to state 17
    constructorexpression          shift and go to state 11
    factorlist                     shift and go to state 14
    factor                         shift and go to state 13
    expression                     shift and go to state 37
    factoid                        shift and go to state 8

state 19

    (2) block -> BLOCKSTART statement_list . BLOCKEND

    BLOCKEND        shift and go to state 38


state 20

    (7) statement -> expression . EOL
    (8) statement -> expression . ASSIGNMENT expression EOL

    EOL             shift and go to state 40
    ASSIGNMENT      shift and go to state 39


state 21

    (30) constructorexpression -> BRA3 KET3 .

    DOT             reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    INFIXOPERATOR   reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    COLON           reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    BRA2            reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    NUMBER          reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    STRING          reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    ID              reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    BRA             reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    BRA3            reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    COMMA           reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    KET3            reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    EOL             reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    ASSIGNMENT      reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    KET2            reduce using rule 30 (constructorexpression -> BRA3 KET3 .)
    KET             reduce using rule 30 (constructorexpression -> BRA3 KET3 .)


state 22

    (31) constructorexpression -> BRA3 expression . KET3

    KET3            shift and go to state 41


state 23

    (11) expression -> BRA2 KET2 .

    KET3            reduce using rule 11 (expression -> BRA2 KET2 .)
    KET             reduce using rule 11 (expression -> BRA2 KET2 .)
    KET2            reduce using rule 11 (expression -> BRA2 KET2 .)
    COMMA           reduce using rule 11 (expression -> BRA2 KET2 .)
    EOL             reduce using rule 11 (expression -> BRA2 KET2 .)
    ASSIGNMENT      reduce using rule 11 (expression -> BRA2 KET2 .)


state 24

    (10) expression -> BRA2 expression . KET2

    KET2            shift and go to state 42


state 25

    (27) dotexpression -> DOT . factor
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    factor                         shift and go to state 43
    constructorexpression          shift and go to state 11
    factoid                        shift and go to state 8

state 26

    (19) factor -> factoid dotexpression .

    INFIXOPERATOR   reduce using rule 19 (factor -> factoid dotexpression .)
    COLON           reduce using rule 19 (factor -> factoid dotexpression .)
    BRA2            reduce using rule 19 (factor -> factoid dotexpression .)
    NUMBER          reduce using rule 19 (factor -> factoid dotexpression .)
    STRING          reduce using rule 19 (factor -> factoid dotexpression .)
    ID              reduce using rule 19 (factor -> factoid dotexpression .)
    BRA             reduce using rule 19 (factor -> factoid dotexpression .)
    BRA3            reduce using rule 19 (factor -> factoid dotexpression .)
    COMMA           reduce using rule 19 (factor -> factoid dotexpression .)
    KET             reduce using rule 19 (factor -> factoid dotexpression .)
    EOL             reduce using rule 19 (factor -> factoid dotexpression .)
    ASSIGNMENT      reduce using rule 19 (factor -> factoid dotexpression .)
    KET3            reduce using rule 19 (factor -> factoid dotexpression .)
    KET2            reduce using rule 19 (factor -> factoid dotexpression .)


state 27

    (4) statement_list -> statement statement_list .

    BLOCKEND        reduce using rule 4 (statement_list -> statement statement_list .)


state 28

    (32) trailer -> BRA2 . expression KET2
    (9) expression -> . oldexpression COMMA expression
    (10) expression -> . BRA2 expression KET2
    (11) expression -> . BRA2 KET2
    (12) expression -> . oldexpression
    (13) oldexpression -> . factor INFIXOPERATOR expression
    (14) oldexpression -> . factor COLON expression
    (15) oldexpression -> . factorlist
    (18) factor -> . factoid
    (19) factor -> . factoid dotexpression
    (16) factorlist -> . factor factorlist
    (17) factorlist -> . factor
    (20) factoid -> . bracketedexpression
    (21) factoid -> . constructorexpression
    (22) factoid -> . NUMBER
    (23) factoid -> . STRING
    (24) factoid -> . ID
    (25) factoid -> . factor trailer
    (26) factoid -> . factor trailertoo
    (28) bracketedexpression -> . BRA expression KET
    (29) bracketedexpression -> . BRA KET
    (30) constructorexpression -> . BRA3 KET3
    (31) constructorexpression -> . BRA3 expression KET3

    BRA2            shift and go to state 5
    NUMBER          shift and go to state 6
    STRING          shift and go to state 12
    ID              shift and go to state 16
    BRA             shift and go to state 18
    BRA3            shift and go to state 4

    bracketedexpression            shift and go to state 9
    oldexpression                  shift and go to state 17
    constructorexpression          shift and go to state 11
    factorlist                     shift and go to state 14
    factor                         shift and go to state 13
    expression                     shift and go to state 44
    factoid                        shift and go to state 8

state 29
